# doc-hub

./: .gitignore  FeaturePlan.md  LICENSE  README.md  auto_build.py  launch_model.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
offline_ai/: model_server.py  model_worker.py  reason_server.py
resources/: style.qss
src/app/: main_window.py  settings_window.py  tag_picker_dialog.py  type_picker_dialog.py
src/core/: ai_service.py  ai_worker.py  background_manager.py  database.py  delete_worker.py  file_indexer.py  file_processing.py  organizer_worker.py  search_index_service.py  search_service.py  search_worker.py  syntax_highlighter.py
src/database/reports/: duplicates_20251109151530.json
src/database/whoosh_index/: MAIN_383gzgviyl2fwq88.seg  _MAIN_2.toc
src/doc_hub/: main.py
src/doc_hub/app/: main_window.py  settings_window.py
src/doc_hub/core/: ai_service.py  ai_worker.py  background_manager.py  database.py  delete_worker.py  duplicate_detector.py  file_indexer.py  file_processing.py  incremental_indexer.py  organizer_worker.py  resource_utils.py  search_index_service.py  search_service.py  search_worker.py  syntax_highlighter.py
src/doc_hub/offline_ai/: ai_manager.py  auto_launcher.py  launch_model.sh  model_server.py  model_worker.py
src/doc_hub/ui/: main_window_ui.py  settings_window_ui.py
src/doc_hub/workers/: ai_worker.py  delete_worker.py  duplicate_worker.py  index_worker.py  organizer_worker.py  (+1 more)
src/ui/: main_window_ui.py
tools/: build_treesitter_bundle.py  reindex_and_find_duplicates.py
ui_files/: main_window.ui  settings_window.ui
