[metadata]
name = doc-hub
version = 1.0.0
author = Gimesha Nirmal
author_email = gimesha@example.com
description = AI-powered document manager built with PySide6
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gimesha/doc-hub
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    PySide6
    markdown
    pyperclip
    tika
    watchdog

[options.packages.find]
where = src
